Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2259,7 +2259,8 @@
    "outputs": [],
    "source": [
     "def delta_f(list_of_terms, x_value, delta_x):\n",
-    "    x_values = list(range(4, ))"
+    "    x_values = list(range(4, 15))\n",
+    "    y_values = list(map)"
    ]
   },
   {
