Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2260,7 +2260,7 @@
    "source": [
     "def delta_f(list_of_terms, x_value, delta_x):\n",
     "    x_values = list(range(4, 15))\n",
-    "    y_values = list(map)"
+    "    y_values = list(map(lamda x: outu))"
    ]
   },
   {
