--- a/index.ipynb
+++ b/index.ipynb
@@ -3279,7 +3279,7 @@
    "outputs": [],
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
-    "    return round(delta_f)"
+    "    return round(delta_f(list_of_terms, x_value))"
    ]
   },
   {
