Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3274,13 +3274,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
     "    dealta = delta_f(list_of_terms, x_value, delta_x)\n",
-    "    return (delta/deltax_)"
+    "    return round(delta/deltax_x, 3)"
    ]
   },
   {
